# ChatDB

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml  run_api.py  run_excel_example.sh  run_sql.py  test.json  test_planner_prompts.py
docs/: README.md  agents.md  architecture.md  preprocessing.md  yaml-config.md
examples/: excel_to_duckdb_example.py  test_api.py  test_csv.py  test_duckdb_simple.py  test_excel_simple.py  test_preprocessing.py
scripts/: clear_duckdb_meta.py
src/chatdb/: __init__.py  cli.py
src/chatdb/agents/: __init__.py  base.py  planner.py  semantic_parser.py  sql_agent.py
src/chatdb/api/: __init__.py  app.py  dependencies.py  schemas.py
src/chatdb/api/routes/: __init__.py  chat.py  database.py  health.py  query.py
src/chatdb/config/: __init__.py  domain_config.py  metrics_loader.py  table_config.py
src/chatdb/core/: __init__.py  orchestrator.py  react_state.py  tracer.py
src/chatdb/database/: README.md  __init__.py  base.py  schema.py
src/chatdb/database/csv/: __init__.py  connector.py
src/chatdb/database/duckdb/: __init__.py  duckdb.py  syntax_rules.py
src/chatdb/database/excel/: data_processor.py  register.py
src/chatdb/formatters/: __init__.py  output.py
src/chatdb/llm/: __init__.py  anthropic_llm.py  base.py  factory.py  hunyuan_llm.py  openai_llm.py
src/chatdb/preprocessing/: __init__.py  column_profiler.py  preprocessor.py  schema_builder.py  text_index.py  vector_store.py
src/chatdb/storage/: __init__.py  chat_history.py  meta_data.py  task_history.py
src/chatdb/tools/: __init__.py  base.py  calibration_designer.py  explore_dimension.py  get_schema.py  registry.py  run_sql.py  semantic_parse.py  sql.py  summarize.py
src/chatdb/utils/: __init__.py  common.py  config.py  exceptions.py  json_utils.py  logger.py
(+8 files in other folders)
